<resources>
    <string name="app_name">Broadcast App</string>
    <string name="my_profile">Profile</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="search_icon">Search Icon</string>
    <string name="search">Search</string>
    <string name="create_new_broadcast_group">Create New Broadcast Group</string>
    <string name="back_button">Back Button</string>
    <string name="attachment_button">Attachment Button</string>
    <string name="send_button">Send Button</string>
    <string name="enter_message">Enter Message</string>
    <string name="received_image">Received Image</string>
    <string name="message_read_or_sent_tick">Message read or sent Tick</string>
    <string name="image_sent">Image Sent</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="selected_participants">Selected Participants</string>
    <string name="create">Create</string>
    <string name="user_item_is_selected">User Item is Selected</string>
    <string name="please_select_more_than_2_people">Please select more than 2 people.</string>
    <string name="enter_the_group_name">Enter the group name</string>
    <string name="select_the_users_to_add_in_the_broadcast_channel">Select the users to add in the broadcast channel</string>
    <string name="close_button">close button</string>
</resources>