<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

<!--        <ImageView-->
<!--            android:id="@+id/iv_back"-->
<!--            android:layout_width="36dp"-->
<!--            android:layout_height="36dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:contentDescription="@string/back_button"-->
<!--            android:src="@mipmap/left_aero" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/my_profile"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
 />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_address"
            android:enabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date_of_birth" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_update_profile"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:backgroundTint="@android:color/transparent"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update"
        android:textColor="@color/textColor"
        app:strokeWidth="1dp"/>


        <Button
            android:id="@+id/btn_logout"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/logout"
            android:textColor="@color/black" />


</LinearLayout>