<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.createBroadCastGroup.CreateNewBroadcastGroupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_select_users_from_ist"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_corner_background"
                app:layout_constraintEnd_toStartOf="@+id/iv_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/search_icon"
                    android:src="@drawable/ic_search"
                    app:tint="@color/drawableColor" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/appColor"
                    android:textColorHint="@color/appColor" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/select_the_users_to_add_in_the_broadcast_channel"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_user_friend_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/user_item" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/appColor"
            android:contentDescription="@string/create_new_broadcast_group"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_create_broadcast_group_with_data"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_group_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/llProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkGrey"
            android:orientation="vertical"
            android:progressTint="@color/appColor"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_group_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_group_image"
            app:layout_constraintTop_toTopOf="@+id/iv_group_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_group_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_group_name"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/selected_participants"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected_user_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/user_item" />

        <Button
            android:id="@+id/btn_create_new_broadcast_group"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="@color/appColor"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>