<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.chatroom.ChatroomFragment">

    <LinearLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:padding="6dp"
        android:background="@color/grey"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/drawableColor" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/ivProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_profile"
            app:civ_border="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvChatroomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp"
            tools:text="User Name" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/llProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGrey"
        android:orientation="vertical"
        android:progressTint="@color/appColor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_action_bar" />
    <LinearLayout
        android:id="@+id/llSendChat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/enter_message_round"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/enter_message"
            android:inputType="textMultiLine"
            android:paddingStart="15dp"
            android:importantForAutofill="no" />
        <!--        <com.vanniktech.emoji.EmojiEditText-->
        <!--            android:id="@+id/etEmoji"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:hint="Say something to GeeksForGeeks..."-->
        <!--            app:emojiSize="30sp"-->
        <!--            android:textColor="@android:color/white" />-->

        <ImageButton
            android:id="@+id/btn_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_attachment"
            app:tint="@color/drawableColor"
            android:contentDescription="@string/attachment_button" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_send"
            app:tint="@color/drawableColor"
            android:contentDescription="@string/send_button" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/llSendChat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llProgress">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMessages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/message_layout" />
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>