<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_send_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:gravity="end"
            android:orientation="vertical"
            android:id="@+id/ll_send"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sent_message_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" >

            <TextView
                android:id="@+id/tvSentMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="all"
                android:textColor="@android:color/white"
                android:textColorLink="@color/linkColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Hello Sir, How are you

                ?" />

            <ImageView
                android:id="@+id/ivSent"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/image_sent" />

            <LinearLayout
                android:id="@+id/layout_footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvSentMessageTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:layout_marginEnd="8dp"
                    tools:text="09:00" />

                <ImageView
                    android:id="@+id/message_tick"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:visibility="gone"
                    android:src="@drawable/message_send_tick"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSentMessageTime"
                    app:layout_constraintEnd_toEndOf="@+id/tvSentMessage"
                    app:layout_constraintTop_toTopOf="@+id/tvSentMessageTime"
                    android:contentDescription="@string/message_read_or_sent_tick" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_receive_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_send_container"
        tools:visibility="visible">

        <LinearLayout
            android:gravity="start"
            android:id="@+id/ll_receive"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/received_message_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

<!--            <TextView-->
<!--                android:id="@+id/tvMessageFrom"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:textColor="@color/darkGrey"-->
<!--                android:textSize="12sp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


            <TextView
                android:id="@+id/tvReceivedMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="all"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessageFrom"
                tools:text="Hello Sir, How are you?" />

            <ImageView
                android:id="@+id/ivReceived"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/received_image" />

            <TextView
                android:id="@+id/tvReceivedMessageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="09:00" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20194647" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>